--- a/src/IdentityService/Pages/Account/Register/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Register/Index.cshtml
@@ -24,12 +24,12 @@
                                                     <input class="form-control" placeholder="Email" asp-for="Input.Email">
                                                 </div>
                                                 <div class="form-group">
-                                                    <label asp-for="Input.FullName"></label>
+                                                    <label asp-for="Input.FullName">Full Name</label>
                                                     <input class="form-control" placeholder="Full name" asp-for="Input.FullName">
                                                 </div>
                                                 
                                                 <div class="form-group">
-                                                    <label asp-for="Input.Password"></label>
+                                                    <label asp-for="Input.Password">Password (Needs to be a strong password for registration to succeed)</label>
                                                     <input type="password" class="form-control" placeholder="Password" asp-for="Input.Password" autocomplete="off">
                                                 </div>
                                                 
