--- a/src/IdentityService/Pages/Index.cshtml
+++ b/src/IdentityService/Pages/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="welcome-page">
     <h1>
         <img src="~/duende-logo.svg" class="logo">
-        Welcome to Duende IdentityServer
+        Welcome to Duende IdentityServer. This is a demo project with Identity included in its most bare bones state.
         <small class="text-muted">(version @Model.Version)</small>
     </h1>
 
@@ -22,11 +22,6 @@
         </li>
         <li>
             Click <a href="~/ciba/all">here</a> to view your pending CIBA login requests.
-        </li>
-        <li>
-            Here are links to the
-            <a href="https://github.com/duendesoftware/IdentityServer">source code repository</a>,
-            and <a href="https://github.com/duendesoftware/samples">ready to use samples</a>.
         </li>
     </ul>
 </div>
